openshift-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petshop
spec:
  selector:
    app: petshop
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
