openshift-manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petshop
spec:
  to:
    kind: Service
    name: petshop
  port:
    targetPort: 8080
  tls:
    termination: edge
